--- a/MYwebsite/css/register.css
+++ b/MYwebsite/css/register.css
@@ -98,7 +98,7 @@ hr {
     color: #2b6777;
 }
 
-#name {
+#name1{
     font-family: 'Montserrat', sans-serif;
     width: 85%;
     margin-left: 20px;
@@ -137,7 +137,7 @@ hr {
     font-size: 17px;
 }
 
-#submit {
+#submit1 {
     padding: 10px;
     color: #2b6777;
     width: 40%;
@@ -153,19 +153,19 @@ hr {
     cursor: pointer;
 }
 
-#submit:hover{
+#submit1:hover{
     transform: scale(1.05);
 }
 
-#error_msg
+#error_msg1
 {
-    width: 350px;
-    height: 50px;
+    width: 375px;
+    height: 30px;
     margin: auto;
     position: absolute;
     top: 0%;
     left: 0;
-    bottom: 60%;
+    bottom: 67%;
     right: 0;
     padding-top: 5px;
     padding-bottom: 5px;
