--- a/MYwebsite/css/style1.css
+++ b/MYwebsite/css/style1.css
@@ -102,7 +102,7 @@ hr {
     font-family: 'Montserrat', sans-serif;
     width: 85%;
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     /*padding-left: 5px;*/
     border-radius: 10px;
     padding: 15px;
@@ -134,7 +134,7 @@ hr {
 #error_msg
 {
     width: 360px;
-    height: 50px;
+    height: 40px;
     margin: auto;
     position: absolute;
     top: 0%;
@@ -178,7 +178,46 @@ body {
     padding-top: 15px;
     padding-left: 70px;
     font-family: 'Montserrat', sans-serif; 
-    font-size: 17px;
+    font-size: 16px;
     color: #2b6777;
     font-weight: bolder;
+}
+
+
+#error_msg1{
+    background-color: #f2f2f2;
+    border : 1px solid #808080;
+    color : red;
+    box-shadow:  1px 1px 1px 1px #808080;
+    width: 350px;
+    height: 40px;
+    margin: auto;
+    position: absolute;
+    top: 70%;
+    left: 0;
+    bottom: 0%;
+    right: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    border-radius: 10px;
+    text-align: center;
+    visibility: hidden;
+}
+
+#label{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: #2b6777;
+    font-weight: bold;
+    margin-left: 25px;
+    margin-top: 15px;
+}
+
+#show{
+    display: flex;
+    float:right; 
+    margin-right: 20px;
+    cursor: pointer;
 }
