--- a/MYwebsite/css/style.css
+++ b/MYwebsite/css/style.css
@@ -21,7 +21,7 @@ hr {
     font-weight: bold;
     /*font-size: larger;*/
     color: white;
-
+    letter-spacing: 4px;
 }
 
 .nav-bar-child1 {
@@ -96,6 +96,7 @@ hr {
     font-size: 30px;
     padding-bottom: 10px;
     color: #2b6777;
+    letter-spacing: 2px;
 }
 
 #name {
