--- a/MYwebsite/css/style1.css
+++ b/MYwebsite/css/style1.css
@@ -21,6 +21,7 @@ hr {
     font-weight: bold;
     /*font-size: larger;*/
     color: white;
+    letter-spacing: 4px;
 
 }
 
@@ -96,6 +97,7 @@ hr {
     font-size: 30px;
     padding-bottom: 10px;
     color: #2b6777;
+    letter-spacing: 2px;
 }
 
 #pass {
