--- a/MYwebsite/css/register.css
+++ b/MYwebsite/css/register.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 hr {
@@ -84,7 +85,9 @@ hr {
     box-shadow: 3px 3px 3px 3px #888888;
     border-radius: 10px;
     transition: width 2s, height 2s;
-    overflow: hidden;
+  
+    
+   
 }
 
 .desc {
@@ -129,7 +132,7 @@ hr {
     font-family: 'Montserrat', sans-serif;
     width: 85%;
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 0px;
     /*padding-left: 5px;*/
     border-radius: 10px;
     padding: 15px;
@@ -152,6 +155,7 @@ hr {
     font-weight: bolder;
     transition: transform 0.2s;
     cursor: pointer;
+    letter-spacing: 1px;
 }
 
 #submit1:hover {
@@ -188,6 +192,7 @@ body {
     background-size:cover;
     background-position: center center;
     background-attachment: fixed;
+    overflow: auto;
 }
 
 .icon {
@@ -197,7 +202,7 @@ body {
 }
 
 #terms {
-    margin-top: 20px;
+    margin-top: 15px;
     margin-left: 20px;
 }
 
@@ -234,4 +239,14 @@ body {
     font-weight: bolder;
     margin: auto;
     visibility: hidden;
+}
+
+.errspan {
+    float: right;
+    margin-right: 6px;
+    margin-top: 0px;
+    position: relative;
+    z-index: 2;
+    color: #2b6777;
+    padding: 0px;
 }
